Fixed centered logo on small screen size

--- a/css/main.css
+++ b/css/main.css
@@ -493,10 +493,6 @@ footer ul li:hover {
     background-size: 215% 20%;
   }
 
-  .matt-skinner {
-    text-align: center;
-  }
-
   .header-div {
     margin-left: 0;
   }
